--- a/package.json
+++ b/package.json
@@ -1,8 +1,11 @@
 {
   "name": "timestamp",
   "version": "1.0.0",
+  "engines": {
+    "node": "7.x"
+  },
   "description": "",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
     "start": "node server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
