Add moment module

--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "author": "dlarouche",
   "license": "MIT",
   "dependencies": {
-    "express": "^4.15.3"
+    "express": "^4.15.3",
+    "moment": "^2.18.1"
   }
 }
